Bug 168751 - FILEOPEN DOCX Overlapping redlines: character formatting on deleted text can not be rejected
Summary: FILEOPEN DOCX Overlapping redlines: character formatting on deleted text can ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2025-10-08 14:27 UTC by Gabor Kelemen (Collabora)
Modified: 2026-02-21 21:44 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file from Writer with bold formatting overlapping deletion (12.61 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-10-08 14:27 UTC, Gabor Kelemen (Collabora)
Details
The document in Word and Writer (73.38 KB, image/png)
2025-10-08 14:27 UTC, Gabor Kelemen (Collabora)
Details
The document after pressing Reject All (55.29 KB, image/png)
2025-10-08 14:28 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-10-08 14:27:27 UTC
Created attachment 203211 [details]
Example file from Writer with bold formatting overlapping deletion

Attached example file contains some tracked deletion, then some partially overlapping text formatting was applied.
When opened in Writer, the text formatting overlapping the deletion can not be rejected.

1. Open attached file
2. Go to the sidebars Manage Changes section
3. Press Reject All twice (another example for bug 168737)
-> There is some bold text that used to be deleted, then formatted.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 708abf24664a9a1aaeac452bcc8436026030e74e
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2025-10-08 14:27:49 UTC
Created attachment 203212 [details]
The document in Word and Writer
Comment 2 Gabor Kelemen (Collabora) 2025-10-08 14:28:16 UTC
Created attachment 203213 [details]
The document after pressing Reject All
Comment 3 Sarah Lim 2025-11-03 10:49:22 UTC
could this be marked as duplicate of Bug 168737 ?
Comment 4 Sarah Lim 2025-11-07 10:31:55 UTC
reproducible 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-GB
Calc: threaded

I used the attached file to test. Pressing reject all does not remove all the changes in Mange Changes section.
Comment 5 Miklos Vajna 2025-12-17 12:09:28 UTC
(In reply to Gabor Kelemen (Collabora) from comment #0)
> 3. Press Reject All twice (another example for bug 168737)

https://bugs.documentfoundation.org/show_bug.cgi?id=168737#c8 should fix this part -- sorry, I used the wrong bug number there.

The boldness remaining in the doc after reject still needs work.
Comment 6 Commit Notification 2025-12-22 15:35:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c25c52dd2286ad0aac86389574d3b3bd258b5b08

tdf#168751 sw interdependent redlines, format on delete: fix unwanted combine

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-12-22 19:37:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/2e8b2844155887ebba0dbc012bee6bca4fe78f7c

tdf#168751 sw interdependent redlines, format on delete: fix unwanted combine

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-12-24 07:43:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/2be5834a1ef7f9dd133433719b12ff0d65cb3318

tdf#168751 sw interdependent redlines, format on delete: fix unwanted combine

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-01-10 09:34:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dcccb89dd37cc8fee40d70eec434688a24b7d629

Related: tdf#168751 sw interdependent redlines, format on del: fix del-on-fmt

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2026-01-12 08:38:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/12cad7b5add0c8371be6eec525675cf64383e75d

Related: tdf#168751 sw interdependent redlines, format on del: fix del-on-fmt

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2026-01-12 09:44:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/60703ae071b7fd5b94b426d245980b344d4aa7f5

Related: tdf#168751 sw interdependent redlines, format on del: fix del-on-fmt

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.