Related: tdf#168751 sw interdependent redlines, format on del: fix del-on-fmt

Open the bugdoc which has a <format>BBBCCCDDD</format> redline. Select
CCC, press delete: now CCC is only covered by a delete redline instead
of a format-on-delete redline.

The trouble is in sw::DocumentRedlineManager::PreAppendDeleteRedline(),
where rCtx.pRedl (format redline) initially covers BBBCCCDDD, but then
it gets reduced to cover only BBB. We also create a pNew redline to
cover only DDD. This gives Writer a way to set rCtx.pNewRedl's range to
CCC without an overlap. The downside is that now reject-all doesn't
modify the format of CCC anymore, so some unexpected boldness remains in
the document.

Fix this similar to how
sw::DocumentRedlineManager::PreAppendForeignRedline()'s rCtx.eCmpPos ==
SwComparePosition::Inside case works: except there PushData() is used to
push the redline data "over" (before creating pNew), and here we use
PushData() to push the redline data "under".

This way UI creates a model where format is always on top of delete (and
not the other way around), which is useful, since DOCX only has markup
for that order and ODT explicitly says this order should be used in
files.

Change-Id: Ida640ad7bb99ed89faef306dac2b840ae3be53f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196918
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit dcccb89dd37cc8fee40d70eec434688a24b7d629)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196958
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>